--- a/eminem.html
+++ b/eminem.html
@@ -29,7 +29,7 @@
                 </main>
                 <footer>
                     <h3> Мои социальные сети </h3>
-<a href=""> Tik-tok: @sigma_1488 
+<a href=""> Tik-tok: @sigma
     <img class="tiktok" src="https://sf-static.tiktokcdn.com/obj/eden-sg/uhtyvueh7nulogpoguhm/tiktok-icon2.png">
 </a>
 <a href="youtube"> Youtube: Sigmarik <img class="kanal"src="https://yt3.googleusercontent.com/ytc/AIdro_kUu7SoD9jUzTJnrY4aj87yUvns3QE0M6Zdvm-XQQ=s900-c-k-c0x00ffffff-no-rj">
